--- a/index.html
+++ b/index.html
@@ -5,9 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rock Paper Scissors</title>
+    <link rel = "stylesheet" href = "styles.css"></style>
+    <script src="script.js" defer></script>
 </head>
-<script src="script.js"></script>
+
 <body>
-    
+    <p>Rounds played: <span id = 'rounds-played'>0</span></p>
+    <p>Player score: <span id = 'player-score'>0</span></p>
+    <p>Computer score: <span id = 'computer-score'>0</span></p>
+    <button id = "rock">🪨</button>
+    <button id = "paper">📄</button>
+    <button id = "scissors">✂️</button>
 </body>
 </html>
